feat: integrated report generation